[build-system]
requires = ["setuptools>=30.3.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tools.setuptools_scm]
write_to="src/enamlext/_version.py"

[tool.tox]
legacy_tox_ini = """
[tox]
envlist = py{38,39,310}

[testenv]
deps =
    pytest
    pytest-qt
    pytest-mock
commands = pytest -vv -s
"""